[gd_scene load_steps=19 format=3 uid="uid://dmiexxcs7s0uj"]

[ext_resource type="Script" path="res://Scripts/player_char.gd" id="1_tx1up"]
[ext_resource type="Texture2D" uid="uid://b4qls6x730qw2" path="res://ArtAssets/Player/player_spritesheet_test.png" id="1_yn357"]
[ext_resource type="Texture2D" uid="uid://d3y6ym6ve6vnt" path="res://ArtAssets/Player/character_spritesheet.png" id="3_vq4ld"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ukdyp"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_stdfl"]
radius = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_4nj7b"]
atlas = ExtResource("3_vq4ld")
region = Rect2(1, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnfow"]
atlas = ExtResource("3_vq4ld")
region = Rect2(19, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3g2rr"]
atlas = ExtResource("3_vq4ld")
region = Rect2(37, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7bf2"]
atlas = ExtResource("3_vq4ld")
region = Rect2(55, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyj4b"]
atlas = ExtResource("3_vq4ld")
region = Rect2(1, 37, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvf7p"]
atlas = ExtResource("3_vq4ld")
region = Rect2(19, 37, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqot4"]
atlas = ExtResource("3_vq4ld")
region = Rect2(1, 19, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjwtc"]
atlas = ExtResource("3_vq4ld")
region = Rect2(19, 19, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc7ba"]
atlas = ExtResource("3_vq4ld")
region = Rect2(1, 55, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik81w"]
atlas = ExtResource("3_vq4ld")
region = Rect2(19, 55, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cprf0"]
atlas = ExtResource("3_vq4ld")
region = Rect2(37, 55, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_skpms"]
atlas = ExtResource("3_vq4ld")
region = Rect2(55, 55, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_iavh0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nj7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnfow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g2rr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7bf2")
}],
"loop": true,
"name": &"walk_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyj4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvf7p")
}],
"loop": true,
"name": &"walk_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqot4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjwtc")
}],
"loop": true,
"name": &"walk_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc7ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik81w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cprf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skpms")
}],
"loop": true,
"name": &"walk_up",
"speed": 6.0
}]

[node name="PlayerChar" type="CharacterBody2D"]
collision_layer = 3
slide_on_ceiling = false
platform_on_leave = 2
platform_floor_layers = 4294901760
script = ExtResource("1_tx1up")
speed = 100

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_yn357")
hframes = 2
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ukdyp")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 5

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_stdfl")

[node name="HurtInvulnerability" type="Timer" parent="."]

[node name="WeaponDirection" type="Node2D" parent="."]

[node name="Marker" type="Marker2D" parent="WeaponDirection"]
position = Vector2(11, 0)

[node name="WeaponCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_iavh0")
animation = &"walk_down"
frame_progress = 0.514461

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="HurtInvulnerability" to="." method="_on_hurt_invulnerability_timeout"]
[connection signal="timeout" from="WeaponCooldown" to="." method="_on_weapon_cooldown_timeout"]
